--- a/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
@@ -69,7 +69,7 @@
           <div class="row mb-1">            
               <div class="col-lg-4">
                 <mat-form-field class="input-full-width">
-                  <input matInput type="text" formControlName="referenciaCtrl" placeholder="Referencia"/>
+                  <input matInput type="text" formControlName="referenciaCtrl" maxlength="20" placeholder="Referencia"/>
                   <mat-error *ngIf="secondFormGroup.get('referenciaCtrl').errors?.required">
                     Este campo es obligatorio
                   </mat-error>  
@@ -78,12 +78,12 @@
 
               <div class="col-lg-4">  
                 <mat-form-field class="input-full-width">
-                  <input matInput type="text" formControlName="piezasCtrl" placeholder="Piezas"/>
+                  <input matInput type="text" formControlName="piezasCtrl" maxlength="7" placeholder="Piezas"/>
                   <mat-error *ngIf="secondFormGroup.get('piezasCtrl').errors?.required">
                     Este campo es obligatorio
                   </mat-error> 
                   <mat-error *ngIf="secondFormGroup.get('piezasCtrl').errors?.pattern">
-                    Debe ser un numero
+                    Debe ser un número
                   </mat-error>
                 </mat-form-field>
               </div>
@@ -92,10 +92,10 @@
                   <input matInput type="text" class="no-spinners" formControlName="pesoCtrl" placeholder="Peso"/>
                   <span matSuffix>Kg.</span>
                   <mat-error *ngIf="secondFormGroup.get('pesoCtrl').errors?.required">
-                      Este campo es obligatorio
+                    Este campo es obligatorio
                   </mat-error> 
                   <mat-error *ngIf="secondFormGroup.get('pesoCtrl').errors?.pattern">
-                    Debe ser un numero
+                    Debe ser un número con máximo 2 decimales
                   </mat-error> 
                 </mat-form-field>
               </div>
@@ -141,9 +141,9 @@
 
               <div class="col-lg-8">
                 <mat-form-field class="input-full-width">
-                  <mat-select formControlName="condicionesAlmacenesCtrl" placeholder="Condiciones Almacén" #singleSelect>
+                  <mat-select formControlName="condicionesAlmacenesCtrl" placeholder="Condiciones de Almacenaje" #singleSelect>
                     <mat-option>                      
-                      <ngx-mat-select-search formControlName="condicionesAlmacenesSearchCtrl" [placeholderLabel]="'Condiciones Almacén'" [noEntriesFoundLabel]="'No hay coincidencias'"></ngx-mat-select-search>
+                      <ngx-mat-select-search formControlName="condicionesAlmacenesSearchCtrl" [placeholderLabel]="'Condiciones de Almacenaje'" [noEntriesFoundLabel]="'No hay coincidencias'"></ngx-mat-select-search>
                     </mat-option>
                     <!-- <mat-option>Ninguno</mat-option>                     -->
                     <mat-option *ngFor="let option of condicionesAlmacenesCatalogo | filterSelect: secondFormGroup.get('condicionesAlmacenesSearchCtrl').value" [value]="option.CveCondicionalmacenaje"> 
@@ -187,7 +187,7 @@
 
               <div class="col-lg-4">
                 <mat-form-field class="input-full-width">
-                  <input matInput type="text" formControlName="consignatarioCtrl" placeholder="Consignatario a Facturar"/>
+                  <input matInput type="text" formControlName="consignatarioCtrl" maxlength="200" placeholder="Consignatario"/>
                   <mat-error *ngIf="secondFormGroup.get('consignatarioCtrl').errors?.required">
                     Este campo es obligatorio
                   </mat-error>                     
@@ -237,20 +237,20 @@
               
             </div>
 
-            <div class="row mb-1">
+            <div class="row mb-0">
               <div class="col-lg-12">
                 Instrucciones de Manejo
               </div>
               <div class="col-lg-12">
                 <mat-radio-group formControlName="instruccionesManejoCtrl" aria-label="Select an option">
                   <div class="row mt-1">
-                    <mat-radio-button class="col" *ngFor="let option of instruccionesManejoCatalogo" [value]="option.ClaveInstruccion" color="primary">                      
+                    <mat-radio-button class="col" *ngFor="let option of instruccionesManejoCatalogo; let i=index" [value]="option.ClaveInstruccion" color="primary">                      
                       {{option.Descripcion}}
                     </mat-radio-button>       
                     <mat-radio-button class="col" value="O" color="primary">                      
                       OTRO
                     </mat-radio-button>                    
-                  </div>                    
+                  </div>                                      
                 </mat-radio-group>
               </div>
             </div>
@@ -258,7 +258,7 @@
             <div class="row mb-1">
               <div class="col-lg-12">
                 <mat-form-field class="input-full-width">
-                  <textarea matInput formControlName="comentarioCtrl" placeholder="Comentario"></textarea>
+                  <textarea matInput formControlName="comentarioCtrl" maxlength="200" placeholder="Comentario"></textarea>
                 </mat-form-field>
               </div>            
             </div>
@@ -271,7 +271,7 @@
             </div>
           </div>
 
-          <div class="row mt-1" style="font-size: 0.55rem; font-weight: bold; float:left;">
+          <div class="row mt-1" style="font-size: 0.7rem; font-weight: bold; float:left;">
             - Cadena fría genera el costo respectivo conforme a tarifa.
           </div>
       </div>
@@ -284,7 +284,7 @@
 
       <div class="container mt-3">
         <!-- <p>Subir documentos: Guia Master, Guia House, Gafete, Etiquetado</p>   -->
-        <p>Subir documentos: {{ DOCUMENTS_REQUIRED[secondFormGroup.get('instruccionesManejoCtrl').value] }} (mínimo subir un documento)</p>
+        <p>Subir documentos: {{ DOCUMENTS_REQUIRED[secondFormGroup.get('instruccionesManejoCtrl').value] }}</p>
         
         <div class="row mb-3">                     
           <div class="col-lg-12 mb-4">
@@ -386,7 +386,7 @@
           </div>
           
           <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-              <div class="detail-text font-weight-bold">Consignatario a Facturar</div> 
+              <div class="detail-text font-weight-bold">Consignatario</div> 
               <p class="detail-text">{{model.Consignatario}}</p>
           </div>
           <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
