--- a/src/app/aaacesa/exportaciones/exportaciones.component.html
+++ b/src/app/aaacesa/exportaciones/exportaciones.component.html
@@ -28,7 +28,7 @@
 
             <div class="col-lg-3 mb-1">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" [(ngModel)]="busquedaModel.IdExportacion" placeholder="Id Exportacion"/>
+                <input matInput type="text" [(ngModel)]="busquedaModel.IdExportacion" placeholder="Id Exportación"/>
               </mat-form-field>
             </div>
 
@@ -82,13 +82,13 @@
           <div class="col-lg-12">
             <div class="row align-items-center">
 
-              <div *ngFor="let estado of statusEnum; let i=index" [ngClass]="{'status-filter--active': currentFilterIndex==i}" class="col mb-1 text-center status-filter u-cursor">            
+              <div (click)="applyFilter(i)" *ngFor="let estado of statusEnum; let i=index" [ngClass]="{'status-filter--active': currentFilterIndex==i}" class="col mb-1 text-center status-filter u-cursor">            
                 <div>
                   <div class="status-filter__circle status-filter__circle--mr-sm status-filter__circle--{{estado | statusPipe}}"></div>
                   <span class="status-filter__number">({{ countStatus[i] }})</span>
                 </div>
                 <div class="status-filter__text">
-                  <label (click)="applyFilter(i)" class="u-cursor">
+                  <label class="u-cursor">
                     {{statusLabels[i]}}                    
                   </label>
                 </div>
@@ -135,8 +135,8 @@
             </ng-container>
             
             <ng-container matColumnDef="FechaEntradaMercancia">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha Entrada Mercancía </th>
-              <td mat-cell *matCellDef="let element"> {{element.FechaEntradaMercancia?.slice(0, 16) }}{{element.FechaEntradaMercancia?.slice(-6)}} </td>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha Entrada Mercancía </th>              
+              <td mat-cell *matCellDef="let element"> {{element.FechaEntradaMercancia}} </td>
             </ng-container>
 
             <ng-container matColumnDef="FechaCreacion">
@@ -266,7 +266,7 @@
 
                     <div *ngIf="detailData.EstatusDisponibles?.length" class="col-sm-12 col-md-12 col-lg-12 mb-1">
                       <mat-form-field class="input-full-width">         
-                        <textarea matInput class="form-control" rows="2" [(ngModel)]="modelSeguimiento.Comentarios" placeholder="Comentario" style="margin-bottom: 1em;"></textarea>                       
+                        <textarea matInput class="form-control" rows="2" [(ngModel)]="modelSeguimiento.Comentarios" placeholder="Escribir comentario" style="margin-bottom: 1em;"></textarea>                       
                       </mat-form-field>
 
                       <ng-container *ngFor="let estado of detailData.EstatusDisponibles" >
