--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -257,7 +257,7 @@
                       </div>
             
                       <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-                          <div class="detail-text font-weight-bold">Condición de Almacenaje</div>
+                          <div class="detail-text font-weight-bold">Condiciones de Almacenaje</div>
                           <p class="detail-text">{{detailData.CondicionAlmacenaje}}</p>
                       </div>
                       
