--- a/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
@@ -29,10 +29,10 @@
                   <mat-form-field class="input-full-width">         
                     <input matInput type="text" formControlName="masterCtrl" [textMask]="{mask: masterMask, guide: false, modelClean: true}" placeholder="Guía Master"/> 
                     <mat-error *ngIf="firstFormGroup.get('masterCtrl').errors?.required">
-                      Este campo es obligatorio
+                      * Este campo es obligatorio
                     </mat-error>
                     <mat-error *ngIf="firstFormGroup.get('masterCtrl').errors?.pattern">
-                      Debe ser una Guia Master
+                      * Debe ser una Guia Master
                     </mat-error>    
                   </mat-form-field>                                                
                 </div>
@@ -40,10 +40,10 @@
                   <mat-form-field class="input-full-width">    
                     <input matInput type="text" formControlName="houseCtrl" maxlength="20" placeholder="Guía House"/>                    
                     <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.required">
-                      Este campo es obligatorio
+                      * Este campo es obligatorio
                     </mat-error>
                     <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.pattern">
-                      Carácteres no permitidos
+                      * Carácteres no permitidos
                     </mat-error> 
                   </mat-form-field>                                     
                 </div>
@@ -68,16 +68,19 @@
           <div class="row mb-1">            
               <div class="col-lg-4">
                 <mat-form-field class="input-full-width">
-                  <input matInput type="text" formControlName="pedimentoCtrl" placeholder="Pedimento"/>
+                  <input matInput type="text" formControlName="pedimentoCtrl" maxlength="15" placeholder="Pedimento"/>
                   <mat-error *ngIf="secondFormGroup.get('pedimentoCtrl').errors?.required">
-                    Este campo es obligatorio
+                    * Este campo es obligatorio
                   </mat-error>  
+                  <mat-error *ngIf="secondFormGroup.get('pedimentoCtrl').errors?.pattern">
+                    * Carácteres no permitidos
+                  </mat-error> 
                 </mat-form-field>
               </div>
 
               <div class="col-lg-4">  
                 <mat-form-field class="input-full-width">
-                  <input matInput type="text" formControlName="piezasCtrl" placeholder="Piezas"/>
+                  <input matInput type="text" formControlName="piezasCtrl" maxlength="7" placeholder="Piezas"/>
                 </mat-form-field>
               </div>
               <div class="col-lg-4">
@@ -85,10 +88,10 @@
                   <input matInput type="text" class="no-spinners" formControlName="pesoCtrl" placeholder="Peso"/>
                   <span matSuffix>Kg.</span>
                   <mat-error *ngIf="secondFormGroup.get('pesoCtrl').errors?.required">
-                      Este campo es obligatorio
+                    * Este campo es obligatorio
                   </mat-error> 
                   <mat-error *ngIf="secondFormGroup.get('pesoCtrl').errors?.pattern">
-                    Debe ser un numero
+                    * Debe ser un número con máximo 2 decimales
                   </mat-error> 
                 </mat-form-field>
               </div>
@@ -98,9 +101,9 @@
             <div class="row mb-1">                              
                 <div class="col-lg-8">
                   <mat-form-field class="input-full-width">
-                    <input matInput type="text" formControlName="fechaEntradaMercanciaCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placeholder="Fecha Entrega de Mercancía">
+                    <input matInput type="text" formControlName="fechaEntradaMercanciaCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placeholder="Fecha Entrada de Mercancía">
                     <mat-error *ngIf="secondFormGroup.get('fechaEntradaMercanciaCtrl').errors?.required">
-                      Este campo es obligatorio
+                      * Este campo es obligatorio
                     </mat-error> 
                   </mat-form-field>                                              
                 </div>
@@ -120,7 +123,7 @@
             <div class="row mb-1">
               <div class="col-lg-12">
                 <mat-form-field class="input-full-width">
-                  <textarea matInput formControlName="comentarioCtrl" placeholder="Comentario"></textarea>
+                  <textarea matInput formControlName="comentarioCtrl" maxlength="200" placeholder="Comentario"></textarea>
                 </mat-form-field>
               </div>            
             </div>
