--- a/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
@@ -65,8 +65,8 @@
               
       <div class="container mt-3">
         <form [formGroup]="secondFormGroup">
-          <div class="row mb-1">            
-              <div class="col-lg-4">
+          <div class="row justify-content-center mb-1">            
+              <div class="col-12 col-sm-6 col-md-6 col-lg-2 col-xl-2">
                 <mat-form-field class="input-full-width">
                   <input matInput type="text" formControlName="pedimentoCtrl" maxlength="15" placeholder="Pedimento"/>
                   <mat-error *ngIf="secondFormGroup.get('pedimentoCtrl').errors?.required">
@@ -78,12 +78,18 @@
                 </mat-form-field>
               </div>
 
-              <div class="col-lg-4">  
+              <div class="col-12 col-sm-6 col-md-6 col-lg-2 col-xl-2">  
                 <mat-form-field class="input-full-width">
                   <input matInput type="text" formControlName="piezasCtrl" maxlength="7" placeholder="Piezas"/>
+                  <mat-error *ngIf="secondFormGroup.get('piezasCtrl').errors?.required">
+                    * Este campo es obligatorio
+                  </mat-error> 
+                  <mat-error *ngIf="secondFormGroup.get('piezasCtrl').errors?.pattern">
+                    * Debe ser un número
+                  </mat-error>
                 </mat-form-field>
               </div>
-              <div class="col-lg-4">
+              <div class="col-12 col-sm-6 col-md-6 col-lg-2 col-xl-2 mb-2 mb-md-0">
                 <mat-form-field class="input-full-width">
                   <input matInput type="text" class="no-spinners" formControlName="pesoCtrl" placeholder="Peso"/>
                   <span matSuffix>Kg.</span>
@@ -95,10 +101,19 @@
                   </mat-error> 
                 </mat-form-field>
               </div>
+
+              <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+                <mat-form-field class="input-full-width">
+                  <input matInput type="text" formControlName="fechaEntradaMercanciaCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placeholder="Fecha Entrada de Mercancía">
+                  <mat-error *ngIf="secondFormGroup.get('fechaEntradaMercanciaCtrl').errors?.required">
+                    * Este campo es obligatorio
+                  </mat-error> 
+                </mat-form-field>                                              
+              </div>
                           
             </div>
 
-            <div class="row mb-1">                              
+            <!-- <div class="row mb-1">                              
                 <div class="col-lg-8">
                   <mat-form-field class="input-full-width">
                     <input matInput type="text" formControlName="fechaEntradaMercanciaCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placeholder="Fecha Entrada de Mercancía">
@@ -108,7 +123,7 @@
                   </mat-form-field>                                              
                 </div>
 
-                <!-- <div class="col-lg-4">                    
+                <div class="col-lg-4">                    
                   <mat-form-field style="width: 49%;" >
                     <input matInput type="number" formControlName="horaPrevioCtrl" style="text-align:center;" min="0" max="23" placeholder="Hrs" />
                   </mat-form-field>
@@ -116,12 +131,12 @@
                   <mat-form-field style="width: 49%;">
                     <input matInput type="number" formControlName="minutoPrevioCtrl" style="text-align:center;" min="0" max="59"  placeholder="Mins" />
                   </mat-form-field>
-                </div> -->            
+                </div>            
                 
-            </div>
+            </div> -->
 
-            <div class="row mb-1">
-              <div class="col-lg-12">
+            <div class="row justify-content-center mb-1">
+              <div class="col-lg-9">
                 <mat-form-field class="input-full-width">
                   <textarea matInput formControlName="comentarioCtrl" maxlength="200" placeholder="Comentario"></textarea>
                 </mat-form-field>
@@ -144,7 +159,7 @@
       <!-- <ng-template matStepLabel>Subir documentos</ng-template> -->
 
       <div class="container mt-3">
-        <p>Subir documentos: Guías master y house, gafete, pedimento pagado, transferencia de carga y DODA. (mínimo subir un documento)</p> 
+        <p>Subir documentos: *Guías master y house, *gafete, *pedimento exportación, manifiesto, carta de instrucción para almacenaje y DODA. (mínimo subir un documento)</p> 
         
         <div class="row mb-1">                     
           <div class="col-lg-12 mb-3">
