--- a/src/app/aaacesa/exportaciones/exportaciones.component.html
+++ b/src/app/aaacesa/exportaciones/exportaciones.component.html
@@ -22,13 +22,13 @@
 
             <div class="col-lg-3 mb-1">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" [(ngModel)]="busquedaModel.House" placeholder="Guía House"/>
+                <input matInput type="text" [(ngModel)]="busquedaModel.House" maxlength="20" placeholder="Guía House"/>
               </mat-form-field>
             </div>            
 
             <div class="col-lg-3 mb-1">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" [(ngModel)]="busquedaModel.IdExportacion" placeholder="Id Exportación"/>
+                <input matInput type="text" [(ngModel)]="busquedaModel.IdExportacion" maxlength="20" placeholder="Id Exportación"/>
               </mat-form-field>
             </div>
 
@@ -42,7 +42,7 @@
           <div class="row">
             <div class="col-lg-3 mb-1">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" [(ngModel)]="busquedaModel.Pedimento" placeholder="Pedimento"/>
+                <input matInput type="text" [(ngModel)]="busquedaModel.Pedimento" maxlength="15" placeholder="Pedimento"/>
               </mat-form-field>
             </div>            
 
@@ -115,7 +115,7 @@
           <table mat-table [dataSource]="dataSource" matSort>                                   
           
             <ng-container matColumnDef="IdExportacion">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Id Exportacion </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Id Exportación </th>
               <td mat-cell *matCellDef="let element">{{element.IdExportacion}}</td>
             </ng-container>
           
