--- a/src/app/aaacesa/previos/previos.component.html
+++ b/src/app/aaacesa/previos/previos.component.html
@@ -352,7 +352,8 @@
                                     <div class="col status-filter">            
                                       <div class="status-filter__circle status-filter__circle--{{item.Estatus | statusPipe }}"></div>
                                       <div class="status-filter__text">{{item.Estatus}}</div>
-                                      <div class="detail-text" style="display: inline-block; padding-left: 5px;">{{item.Fecha?.slice(0, -3)}}</div>
+                                      <!-- <div class="detail-text" style="display: inline-block; padding-left: 5px;">{{item.Fecha?.slice(0, -3)}}</div> -->
+                                      <div class="detail-text" style="display: inline-block; padding-left: 5px;">{{item.Fecha}}</div>
                                     </div>                                                                                                              
                                   </mat-expansion-panel-header>
                                   <p class="detail-text">{{item.Usuario}}</p>
