--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -28,26 +28,26 @@
                   <mat-form-field class="input-full-width">         
                     <input matInput type="text" (input)="cleanReferencia()" formControlName="masterCtrl" [textMask]="{mask: masterMask, guide: false, modelClean: true}" placeholder="Guía Master"/> 
                     <mat-error *ngIf="firstFormGroup.get('masterCtrl').errors?.required">
-                      Este campo es obligatorio
+                      * Este campo es obligatorio
                     </mat-error>
                     <mat-error *ngIf="firstFormGroup.get('masterCtrl').errors?.pattern">
-                      Debe ser una Guia Master
+                      * Debe ser una Guia Master
                     </mat-error>    
                   </mat-form-field>                              
 
                   <mat-form-field class="input-full-width">    
                     <input matInput type="text" (input)="cleanReferencia()" maxlength="20" formControlName="houseCtrl" placeholder="Guía House"/>  
                     <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.required">
-                      Este campo es obligatorio
+                      * Este campo es obligatorio
                     </mat-error>
                     <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.pattern">
-                      Carácteres no permitidos
+                      * Carácteres no permitidos
                     </mat-error>     
                   </mat-form-field> 
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">                                                
                   <mat-form-field class="input-full-width">    
-                    <input matInput type="text" formControlName="referenciaCtrl" placeholder="Referencia"/>                      
+                    <input matInput type="text" formControlName="referenciaCtrl" maxlength="20" placeholder="Referencia"/>                      
                     <!-- <input matInput type="text" (input)="checkReferencia()" formControlName="referenciaCtrl" placeholder="Referencia"/>                       -->
                   </mat-form-field>                 
                   <button (click)="checkReferencia()" style="float: right;" class="btn btn-pill btn-primary btn-sm"> <i class="fas fa-search"></i> Buscar referencia</button>            
@@ -71,10 +71,67 @@
         <div class="container mt-3">
           <form [formGroup]="secondFormGroup">
         
+              <!-- <div class="row justify-content-center mb-1">                     
+                <div class="col-12 col-sm-6 col-md-6 col-lg-2 col-xl-2">  
+                  <mat-form-field class="input-full-width">
+                    <input matInput type="text" formControlName="piezasCtrl" maxlength="7" placeholder="Piezas"/>
+                    <mat-error *ngIf="secondFormGroup.get('piezasCtrl').errors?.required">
+                      * Este campo es obligatorio
+                    </mat-error> 
+                    <mat-error *ngIf="secondFormGroup.get('piezasCtrl').errors?.pattern">
+                      * Debe ser un número
+                    </mat-error>
+                  </mat-form-field>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-2 col-xl-2 mb-2 mb-md-0">
+                  <mat-form-field class="input-full-width">
+                    <input matInput type="text" class="no-spinners" formControlName="pesoCtrl" placeholder="Peso"/>
+                    <span matSuffix>Kg.</span>
+                    <mat-error *ngIf="secondFormGroup.get('pesoCtrl').errors?.required">
+                      * Este campo es obligatorio
+                    </mat-error> 
+                    <mat-error *ngIf="secondFormGroup.get('pesoCtrl').errors?.pattern">
+                      * Debe ser un número con máximo 2 decimales
+                    </mat-error> 
+                  </mat-form-field>
+                </div>  
+                
+                <div class="col-12 col-sm-6 col-md-6 col-lg-2 col-xl-2">
+                  <mat-form-field class="input-full-width">
+                    <input matInput type="text" formControlName="fechaPrevioCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placeholder="Fecha Previo">
+                    <mat-error *ngIf="secondFormGroup.get('fechaPrevioCtrl').errors?.required">
+                      * Este campo es obligatorio
+                    </mat-error> 
+                  </mat-form-field>                                              
+                </div>
+
+                <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">                    
+                  <mat-form-field style="width: 49%;" >
+                    <input matInput type="number" formControlName="horaPrevioCtrl" style="text-align:center;" min="0" max="23" placeholder="Hrs" />
+                  </mat-form-field>
+                  <strong style="font-size:.5rem;">:</strong>
+                  <mat-form-field style="width: 49%;">
+                    <input matInput type="number" formControlName="minutoPrevioCtrl" style="text-align:center;" min="0" max="59"  placeholder="Mins" />
+                  </mat-form-field>
+                </div>    
+
+                <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">                                             
+                  <mat-slide-toggle formControlName="etiquetadoCtrl" color="primary">Etiquetado</mat-slide-toggle>                  
+                </div>                               
+              </div>    -->
+                            
+              <!--  -->              
+        
               <div class="row mb-1">                     
                 <div class="col-lg-4">  
                   <mat-form-field class="input-full-width">
-                    <input matInput type="text" formControlName="piezasCtrl" placeholder="Piezas"/>
+                    <input matInput type="text" formControlName="piezasCtrl" maxlength="7" placeholder="Piezas"/>
+                    <mat-error *ngIf="secondFormGroup.get('piezasCtrl').errors?.required">
+                      * Este campo es obligatorio
+                    </mat-error> 
+                    <mat-error *ngIf="secondFormGroup.get('piezasCtrl').errors?.pattern">
+                      * Debe ser un número
+                    </mat-error> 
                   </mat-form-field>
                 </div>
                 <div class="col-lg-4">
@@ -82,10 +139,10 @@
                     <input matInput type="text" class="no-spinners" formControlName="pesoCtrl" placeholder="Peso"/>
                     <span matSuffix>Kg.</span>
                     <mat-error *ngIf="secondFormGroup.get('pesoCtrl').errors?.required">
-                        Este campo es obligatorio
+                      * Este campo es obligatorio
                     </mat-error> 
                     <mat-error *ngIf="secondFormGroup.get('pesoCtrl').errors?.pattern">
-                      Debe ser un numero
+                      * Debe ser un número con máximo 2 decimales
                     </mat-error> 
                   </mat-form-field>
                 </div>    
@@ -100,7 +157,7 @@
                   <mat-form-field class="input-full-width">
                     <input matInput type="text" formControlName="fechaPrevioCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placeholder="Fecha">
                     <mat-error *ngIf="secondFormGroup.get('fechaPrevioCtrl').errors?.required">
-                      Este campo es obligatorio
+                      * Este campo es obligatorio
                     </mat-error> 
                   </mat-form-field>                                              
                 </div>
@@ -115,6 +172,7 @@
                   </mat-form-field>
                 </div>                                       
               </div>
+              <!--  -->
               
             </form>
 
@@ -138,22 +196,22 @@
               <mat-form-field class="input-full-width">
                 <input matInput type="text" (change)="checkGafete()" formControlName="numGafeteCtrl" placeholder="No. Gafete"/>
                 <mat-error *ngIf="thirdFormGroup.get('numGafeteCtrl').errors?.required">
-                  Este campo es obligatorio
+                  * Este campo es obligatorio
                 </mat-error> 
                 <mat-error *ngIf="thirdFormGroup.get('numGafeteCtrl').errors?.pattern">
-                  Debe ser un numero
+                  * Debe ser un número
                 </mat-error> 
               </mat-form-field>
             </div>  
             
             <div class="col-lg-6">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" formControlName="patenteCtrl" placeholder="Patente"/>
+                <input matInput type="text" formControlName="patenteCtrl" maxlength="10" placeholder="Patente"/>
                 <mat-error *ngIf="thirdFormGroup.get('patenteCtrl').errors?.required">
-                  Este campo es obligatorio
+                  * Este campo es obligatorio
                 </mat-error> 
                 <mat-error *ngIf="thirdFormGroup.get('patenteCtrl').errors?.pattern">
-                  Debe ser un numero
+                  * Carácteres no permitidos
                 </mat-error> 
               </mat-form-field>
             </div>                               
@@ -164,7 +222,7 @@
                 <mat-form-field class="input-full-width">
                   <input matInput type="text" formControlName="nombreCtrl" placeholder="Nombre del tramitador"/>
                   <mat-error *ngIf="thirdFormGroup.get('nombreCtrl').errors?.required">
-                    Este campo es obligatorio
+                    * Este campo es obligatorio
                   </mat-error>  
                 </mat-form-field>
               </div>
@@ -172,7 +230,7 @@
                 <mat-form-field class="input-full-width">
                   <input matInput type="text" formControlName="paternoCtrl" placeholder="Apellido Paterno"/>
                   <mat-error *ngIf="thirdFormGroup.get('paternoCtrl').errors?.required">
-                    Este campo es obligatorio
+                    * Este campo es obligatorio
                   </mat-error>  
                 </mat-form-field>
               </div>
@@ -180,7 +238,7 @@
                 <mat-form-field class="input-full-width">
                   <input matInput type="text" formControlName="maternoCtrl" placeholder="Apellido Materno"/>
                   <mat-error *ngIf="thirdFormGroup.get('maternoCtrl').errors?.required">
-                    Este campo es obligatorio
+                    * Este campo es obligatorio
                   </mat-error> 
                 </mat-form-field>
               </div>              
@@ -189,7 +247,7 @@
             <div class="row mb-1">
               <div class="col-lg-12">
                 <mat-form-field class="input-full-width">
-                  <textarea matInput formControlName="comentarioCtrl" placeholder="Comentario"></textarea>
+                  <textarea matInput formControlName="comentarioCtrl" maxlength="200" placeholder="Comentario"></textarea>
                 </mat-form-field>
               </div>            
             </div>
