--- a/src/app/aaacesa/dialogs/dialog-create-salida.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-salida.component.html
@@ -29,26 +29,26 @@
                   <mat-form-field class="input-full-width">         
                     <input matInput type="text" (input)="cleanReferencia()" formControlName="masterCtrl" [textMask]="{mask: masterMask, guide: false, modelClean: true}" placeholder="Guía Master"/> 
                     <mat-error *ngIf="firstFormGroup.get('masterCtrl').errors?.required">
-                      Este campo es obligatorio
+                      * Este campo es obligatorio
                     </mat-error>
                     <mat-error *ngIf="firstFormGroup.get('masterCtrl').errors?.pattern">
-                      Debe ser una Guia Master
+                      * Debe ser una Guia Master
                     </mat-error>    
                   </mat-form-field>                              
 
                   <mat-form-field class="input-full-width">    
                     <input matInput type="text" (input)="cleanReferencia()" formControlName="houseCtrl" maxlength="20" placeholder="Guía House"/>  
                     <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.required">
-                      Este campo es obligatorio
+                      * Este campo es obligatorio
                     </mat-error>
                     <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.pattern">
-                      Carácteres no permitidos
+                      * Carácteres no permitidos
                     </mat-error>   
                   </mat-form-field> 
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">                                                
                   <mat-form-field class="input-full-width">    
-                    <input matInput type="text" formControlName="referenciaCtrl" placeholder="Referencia"/>                      
+                    <input matInput type="text" formControlName="referenciaCtrl" maxlength="20" placeholder="Referencia"/>                      
                   </mat-form-field> 
                   <button (click)="checkReferencia()" style="float: right;" class="btn btn-pill btn-primary btn-sm"><i class="fas fa-search"></i> Buscar referencia</button>                            
                 </div>
@@ -73,21 +73,24 @@
           <div class="row mb-1">            
               <div class="col-lg-4">
                 <mat-form-field class="input-full-width">
-                  <input matInput type="text" formControlName="rfcFacturarCtrl" placeholder="RFC Facturar"/>
+                  <input matInput type="text" formControlName="rfcFacturarCtrl" maxlength="14" placeholder="RFC Facturar"/>
                   <mat-error *ngIf="secondFormGroup.get('rfcFacturarCtrl').errors?.required">
-                    Este campo es obligatorio
+                    * Este campo es obligatorio
                   </mat-error>  
+                  <mat-error *ngIf="secondFormGroup.get('rfcFacturarCtrl').errors?.pattern">
+                    * Carácteres no permitidos
+                  </mat-error> 
                 </mat-form-field>
               </div>
               
               <div class="col-lg-4">
                 <mat-form-field class="input-full-width">
-                  <input matInput type="text" class="no-spinners" formControlName="pedimentoCtrl" placeholder="Pedimento"/>
+                  <input matInput type="text" class="no-spinners" formControlName="pedimentoCtrl" maxlength="15" placeholder="Pedimento"/>
                   <mat-error *ngIf="secondFormGroup.get('pedimentoCtrl').errors?.required">
-                    Este campo es obligatorio
+                    * Este campo es obligatorio
                   </mat-error> 
                   <mat-error *ngIf="secondFormGroup.get('pedimentoCtrl').errors?.pattern">
-                    Debe ser un numero
+                    * Carácteres no permitidos
                   </mat-error> 
                 </mat-form-field>
               </div>
@@ -101,12 +104,12 @@
             <div class="row mb-1">
               <div class="col-lg-4">
                 <mat-form-field class="input-full-width">
-                  <input matInput type="text" class="no-spinners" formControlName="patenteCtrl" placeholder="Patente"/>
+                  <input matInput type="text" class="no-spinners" formControlName="patenteCtrl" maxlength="10" placeholder="Patente"/>
                   <mat-error *ngIf="secondFormGroup.get('patenteCtrl').errors?.required">
-                    Este campo es obligatorio
+                    * Este campo es obligatorio
                   </mat-error> 
                   <mat-error *ngIf="secondFormGroup.get('patenteCtrl').errors?.pattern">
-                    Debe ser un numero
+                    * Carácteres no permitidos
                   </mat-error> 
                 </mat-form-field>
               </div>
@@ -115,7 +118,7 @@
                 <mat-form-field class="input-full-width">
                   <input matInput type="text" formControlName="fechaSalidaCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placeholder="Fecha Salida">
                   <mat-error *ngIf="secondFormGroup.get('fechaSalidaCtrl').errors?.required">
-                    Este campo es obligatorio
+                    * Este campo es obligatorio
                   </mat-error> 
                 </mat-form-field>                                              
               </div>
@@ -134,7 +137,7 @@
             <div class="row mb-1">
               <div class="col-lg-12">
                 <mat-form-field class="input-full-width">
-                  <textarea matInput formControlName="comentarioCtrl" placeholder="Comentario"></textarea>
+                  <textarea matInput formControlName="comentarioCtrl" maxlength="200" placeholder="Comentario"></textarea>
                 </mat-form-field>
               </div>            
             </div>
@@ -230,7 +233,7 @@
               <p class="detail-text">{{model.Patente}}</p>
             </div>
             <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-              <div class="detail-text font-weight-bold">Subdivision</div>
+              <div class="detail-text font-weight-bold">Subdivisión</div>
               <p class="detail-text">{{model.Subdivision ? 'Sí' : 'No'}}</p>
             </div>
           </div><!-- End Row Inside --> 
